# TestUpTraider

./: db.sqlite3  pyproject.toml
core/: settings.py  urls.py
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: home.html
menu/templatetags/: tree_menu.py
tree/: admin.py  models.py  views.py
tree/migrations/: 0001_initial.py
tree/templates/tree/: base.html
